--- a/nicoli_flashcard/index.html
+++ b/nicoli_flashcard/index.html
@@ -1,37 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-    <link rel="stylesheet" href="assets/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flashcard Nicoli</title>
-    <script src="app.js"></script>
-    <script src="perguntas.js"></script>
+    <link rel="stylesheet" href="assets/style.css">
+    <title>Nicoli Flashcard</title>
 </head>
-
 <body>
     <main>
         <section id="container">
-            <article class="cartao">
-                cartao.innerHTML = `
+            <!-- <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3> Programação </h3>
+                    <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>O que é Java Script?</p>
+                        <p>O que é JavaScript?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>O Java Script é uma linguagem de programação.</p>
+                        <p>O JavaScript é uma linguagem de programação</p>
                     </div>
                 </div>
-                `
-                </article>
-                </div>
+            </article> -->
         </section>
     </main>
     <footer>
-        <p>Projeto desenvolvido pela Alura, sem fins lucrativos.</p>
+        <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
     </footer>
+    <script src="app.js"></script>
+    <script src="perguntas.js"></script>
 </body>
-
 </html>
